--- a/package.json
+++ b/package.json
@@ -1,27 +1,42 @@
 {
-  "name": "comprend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "bp-cpd-app",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 6006",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "storybook": "start-storybook -p 6006 -c .storybook",
     "build-storybook": "build-storybook"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "next": "12.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-webpack4": "^6.5.9",
-    "@storybook/html": "^6.5.9",
-    "@storybook/manager-webpack4": "^6.5.9",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
+    "@storybook/preset-typescript": "^3.0.0",
+    "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
-    "babel-loader": "^8.2.5"
-  },
-  "dependencies": {}
+    "@types/node": "^18.6.3",
+    "@types/react": "^18.0.15",
+    "babel-loader": "^8.2.5",
+    "babel-preset-react-app": "^10.0.1",
+    "css-loader": "^6.7.1",
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.3",
+    "eslint-plugin-storybook": "^0.6.3",
+    "sass": "^1.54.1",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.7.4"
+  }
 }
